# port-cli

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  MANIFEST.in  Makefile  README.md  RELEASE.md  devbox.json  go.mod  go.sum  pyproject.toml  skills-lock.json
.beads/: issues.jsonl
.github/workflows/: branch-release-cleanup.yml  branch-release.yml  ci.yml  release.yml  test-and-publish.yml
08/b1f0188294/: metadata.json
0b/6d3e0c94da/: metadata.json
0c/3e76986bcc/: metadata.json
13/9c39ab883f/: metadata.json
16/0d16b414b7/: metadata.json
1b/b6f4eb0561/: metadata.json
1e/0de27d4ae1/: metadata.json
24/2f2aeee5b4/: metadata.json
25/8040a425e4/: metadata.json
26/9cc2e3e278/: metadata.json
28/9246096b66/: metadata.json
2c/c21fd5e586/: metadata.json
3a/61799d6488/: metadata.json
3e/ac1cce3f9a/: metadata.json
49/8c8956e810/: metadata.json
69/2ad8b1200f/: metadata.json
6e/28937c8697/: metadata.json
72/d69bb9cd25/: metadata.json
7a/11275d266e/: metadata.json
81/41444f4dfe/: metadata.json
95/d9d109f649/: metadata.json
96/79e6c5d650/: metadata.json
97/80a9ca19b2/: metadata.json
a0/896ec6ff15/: metadata.json
a6/23496bec17/: metadata.json
aa/e48c5b4fd2/: metadata.json
api-specs/: openapi.json
b2/772e2c77ea/: metadata.json
b4/3e6b2e550e/: metadata.json
bc/7176ac1f1b/: metadata.json
bc/dc2b8631cd/: metadata.json
be/a11f65f84f/: metadata.json
c7/3816a9dcc5/: metadata.json
c7/5248448b82/: metadata.json
c7/e6a41e09fe/: metadata.json
c8/5202c6e2fb/: metadata.json
ca/f83c73000d/: metadata.json
cb/0b8ec2b899/: metadata.json
cf/fbee955486/: metadata.json
cmd/port/: logo.txt  main.go
d9/48c7f3e1af/: metadata.json
docs/: plugin-setup.md  skills-e2e-local.md  skills-setup.md
docs/api/: API_AUTHENTICATION.md  CLI_API_COMMANDS.md  OPENAPI_STATUS.md
docs/plans/: 2026-02-05-import-reliability-design.md  2026-02-05-port-compare-design.md  2026-02-05-port-compare-implementation.md  2026-07-02-cli-p0-remediation.md  plugin-skills-sync.md  remaining-errors-sample.md  skills-sync.md
docs/reviews/: cli-review-findings-2026-07-02.md
e1/43133844b5/: metadata.json
e2e/skills/: admin.go  catalog.go  disk.go  harness.go  portapi.go  seed.go  skills_e2e_test.go
ef/b168341b34/: metadata.json
examples/ado-blueprint-sync/: port-action.json
fe/448b71b67a/: metadata.json
internal/api/: INTEGRATION_GUIDE.md  client.go  client_test.go  endpoint_wrappers_test.go  requests.go  requests_test.go  skill_blueprints.go  skill_blueprints_test.go  skills.go  skills_test.go  token.go
internal/auth/: auth.go  auth_test.go  cache.go  oauth_audience.go  oauth_audience_test.go
internal/commands/: agents.go  agents_create_test.go  agents_test.go  api.go  api_test.go  auth.go  auth_test.go  cache.go  clear.go  clear_test.go  compare.go  (+39 more)
npm/: LICENSE  README.md  install.js  package.json
scripts/: build-npm.sh  e2e-skills-local.sh  generate-api.sh  install.sh  test-binary.sh
tests/: __init__.py  conftest.py  test_api_client.py  test_config.py
(+449 files in other folders)
